
		CHANGES in `multcomp' VERSION 0.992-1

    o    fix LaTeX problem in vignette (spotted by Brian D. Ripley)


		CHANGES in `multcomp' VERSION 0.991-9

    o    fix some minor problems spotted for plotting or
         printing of confidence intervals (thanks for Rich Heiberger and
         Ludwig Hothorn)


		CHANGES in `multcomp' VERSION 0.991-8

    o    make sure `type' is available

    o    catch errors with `aovlist' objects

    o    print for confint method indicates if confidence 
         intervals are adjusted or univariate


		CHANGES in `multcomp' VERSION 0.991-7

    o    try to deal with non-estimable coefficients in `model': if the
         correspondings columns of `linfct' are zero anyway, we silently
         proceed. If not, we stop and ask for a correctly specified model.

    o    try to detect interactions with numeric covariates. We need to
         choose a specific value here but it seems hard to add 
         something appropriate to the user interface (I don't want to touch
         `mcp'). For the time being, we fire a warning and the user can 
         modify `linfct' manually.

    o    add mcp(<name> = "Means"), contribution by Richard M. Heiberger
         <rmh@temple.edu>

    o    add Rich to DESCRIPTION file


		CHANGES in `multcomp' VERSION 0.991-5

    o    plot.confint allows for specification of xlim, xlab and main
         (patch by Rich Heiberger)


		CHANGES in `multcomp' VERSION 0.991-4

    o    Depends: stats

    o    confint(..., calpha = x) can be used to specify critical
         values directly (with x being either a function or a scalar)


		CHANGES in `multcomp' VERSION 0.991-3

    Implement feature requests by Rich Heiberger <rmh@temple.edu>:

    o    glht.mcp adds a `focus' element to the returned object
         containing the names of the factors under test

    o    plot.glht calls plot.confint.glht

    o    documentation updates

    o    fixed three minor bugs


		CHANGES in `multcomp' VERSION 0.991-2
